# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  dump.rdb  render.yaml  spec.yaml
.sqlx/: query-01a41ea1a2e0e27e92116282ee82fb4d4cb788aae6e3a2775473242edc4e0cc0.json  query-04f8eb3d706a472b9e41a115425672d25bfe114728e83e5558bdca52fad4caac.json  query-20764c66d47fa215fb47044e29dba9106e283487d30607cc6f03767464a831bd.json  query-2e02e5d72d14d506e16d32324cebf0cac631471e10eb1f758cb64e2f3200d643.json  query-619159927593341dd279d5ed56e936aa07a5bd0c8b7cab2f4593f980cfdf4d9c.json  query-6281046fae645002aa6e34a7043234dd112f0703b586859065d8570da4c8e53c.json  query-70d35efd7e5842deb60afc4fa7e2ac9ad7faa8de74a35bcc7815b78165ea013b.json  query-83938519ea3b067a4631018b006ed2f2b6052c183fc8e869c149809abb0f2feb.json  query-b23774d4de40d71fd531a3526639012ee7318bce228351678d96fd84c88dba4e.json  query-ba247de5a56b66f4d740582dae7d90f19dc5f4648b5f54a79ae80f3326175610.json  query-c2330f99a1385f4ae51ae7eba71029818875fba9d23548396e625a8c7ba6fec9.json  query-cf2cb9c5aa8ff205ba293951f42db702ecf47d6189b4c9b8a66f20b28b749c20.json  query-d761f3187962ce1c89f5798890251cb5ffd7cc7a57bee3e8eda9d7ab42e2f2fa.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250924212720_add_status_to_subscriptions.sql  20250924230420_make_status_not_null_in_subscriptions.sql  20250924230631_create_subscriptions_token_table.sql  20251029162152_rename_password_column.sql  20251112064309_seed_user.sql  20251124090215_create_newsletter_issues_table.sql  20251124110802_create_issues_delivery_queue.sql
scripts/: init_db.sh  init_db2.sh  init_redis.sh  run_docker.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_work.rs  lib.rs  main.rs  session_crate.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistent.rs
src/middleware/: middleware.rs  mod.rs
src/routes/: mod.rs  newsletter.rs  subscription.rs  subscriptions_confirm.rs  utils.rs
src/routes/admin/: dashboard.html  dashboard.rs  mod.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
src/routes/logout/: post.rs
src/routes/newsletter/: get.rs  mod.rs  post.rs
src/routes/reset/: get.rs  mod.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  reset.rs  subscriptions.rs  subscriptions_confirm.rs
