[package]
name = "zero2production"
version = "0.1.0"
edition = "2024"
authors =  ["Billy Bongso <billybongso2001@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.11.0"
config = "0.11.0"
reqwest = {version="0.12.23",features=["json","rustls-tls","cookies"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-async-std", "uuid","time","chrono","tls-native-tls"]}
tokio = {version="1.47.1",features=["full"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = {version = "0.3.20", features = ["registry","env-filter"]}
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.19"
serde-aux = "4.7.0"
native-tls = "0.2.14"
unicode-segmentation = "1.12.0"
claim = "0.5"
validator = "0.20.0"
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
wiremock = "0.6.5"
linkify = "0.10.0"
rand = { version = "0.9.2", features = ["std_rng"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
base64 = "0.13"
sha3 = "0.10.8"
argon2 = {version="0.5.3",features=["alloc", "password-hash"]}
hex = "0.4.3"
urlencoding = "2.1.3"
htmlescape = "0.3.1"
hmac = "0.12.1"
sha2 = "0.10.9"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
actix-session = { version = "0.11.0", features = ["redis-session-native-tls"] }
features = "0.10.0"
zxcvbn = "3.1.0"
actix-web-lab = "0.24.3"
serde_urlencoded = "0.7.1"
[dependencies.uuid]
version = "1.17.0"
features = ["serde", "v4"]

[dependencies.chrono]
version = "0.4.15"

